--- a/tools/Python/mcdisplay/webgl/components/scene/three-canvas.css
+++ b/tools/Python/mcdisplay/webgl/components/scene/three-canvas.css
@@ -23,7 +23,10 @@
   border: solid 1.5px var(--border-color);
   width: 100%;
   height: 100%;
-  color: var(--text-color);
+}
+
+.opposite-color {
+  color: var(--border-color);
 }
 
 .two-D{
